Changed html and added script for business logic

--- a/index.html
+++ b/index.html
@@ -28,7 +28,178 @@
 </head>
 
 <body>
-    Hi
+    <div class="container">
+        <div class="text-center mt-2 mb-5"><h1>Grade Finder JNTUH 4-1 R16</h1></div>
+        <table class="table table-sm">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Subject Code</th>
+                    <th scope="col">Subject Name</th>
+                    <th scope="col">Grade</th>
+                    <th scope="col">Credits</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>13707</td>
+                    <td>DATA MINING LAB</td>
+                    <td><select id="sub1" onchange="gotAll()" class="browser-default custom-select">
+                        <option selected value="-1">Select Grade</option>
+                        <option value="10">O</option>
+                        <option value="9">A+</option>
+                        <option value="8">A</option>
+                        <option value="7">B+</option>
+                        <option value="6">B</option>
+                        <option value="5">C</option>
+                        <option value="0">F</option>
+                        <option value="0">Ab</option>
+                      </select></td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>13720</td>
+                    <td>INTERNET OF THINGS LAB</td>
+                    <td><select id="sub2" onchange="gotAll()" class="browser-default custom-select">
+                        <option selected value="-1">Select Grade</option>
+                        <option value="10">O</option>
+                        <option value="9">A+</option>
+                        <option value="8">A</option>
+                        <option value="7">B+</option>
+                        <option value="6">B</option>
+                        <option value="5">C</option>
+                        <option value="0">F</option>
+                        <option value="0">Ab</option>
+                      </select></td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>13737</td>
+                    <td>INDUSTRY ORIENTED MINI PROJECT</td>
+                    <td><select id="sub3" onchange="gotAll()" class="browser-default custom-select">
+                        <option selected value="-1">Select Grade</option>
+                        <option value="10">O</option>
+                        <option value="9">A+</option>
+                        <option value="8">A</option>
+                        <option value="7">B+</option>
+                        <option value="6">B</option>
+                        <option value="5">C</option>
+                        <option value="0">F</option>
+                        <option value="0">Ab</option>
+                      </select></td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>13767</td>
+                    <td>SEMINAR</td>
+                    <td><select id="sub4" onchange="gotAll()" class="browser-default custom-select">
+                        <option selected value="-1">Select Grade</option>
+                        <option value="10">O</option>
+                        <option value="9">A+</option>
+                        <option value="8">A</option>
+                        <option value="7">B+</option>
+                        <option value="6">B</option>
+                        <option value="5">C</option>
+                        <option value="0">F</option>
+                        <option value="0">Ab</option>
+                      </select></td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>137BQ</td>
+                    <td>DATA MINING</td>
+                    <td><select id="sub5" onchange="gotAll()" class="browser-default custom-select">
+                        <option selected value="-1">Select Grade</option>
+                        <option value="10">O</option>
+                        <option value="9">A+</option>
+                        <option value="8">A</option>
+                        <option value="7">B+</option>
+                        <option value="6">B</option>
+                        <option value="5">C</option>
+                        <option value="0">F</option>
+                        <option value="0">Ab</option>
+                      </select></td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td>137GA</td>
+                    <td>PRINCIPLES OF PROGRAMMING LANGUAGES</td>
+                    <td><select id="sub6" onchange="gotAll()" class="browser-default custom-select">
+                        <option selected value="-1">Select Grade</option>
+                        <option value="10">O</option>
+                        <option value="9">A+</option>
+                        <option value="8">A</option>
+                        <option value="7">B+</option>
+                        <option value="6">B</option>
+                        <option value="5">C</option>
+                        <option value="0">F</option>
+                        <option value="0">Ab</option>
+                      </select></td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <th scope="row">7</th>
+                    <td>137ZN</td>
+                    <td>INTRODUCTION TO INTERNET OF THINGS (MOOCS)</td>
+                    <td><select id="sub7" onchange="gotAll()" class="browser-default custom-select">
+                        <option selected value="-1">Select Grade</option>
+                        <option value="10">O</option>
+                        <option value="9">A+</option>
+                        <option value="8">A</option>
+                        <option value="7">B+</option>
+                        <option value="6">B</option>
+                        <option value="5">C</option>
+                        <option value="0">F</option>
+                        <option value="0">Ab</option>
+                      </select></td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <th scope="row">8</th>
+                    <td>137ZP</td>
+                    <td>INTRODUCTION TO MACHINE LEARNING (MOOCS)</td>
+                    <td><select id="sub8" onchange="gotAll()" class="browser-default custom-select">
+                        <option selected value="-1">Select Grade</option>
+                        <option value="10">O</option>
+                        <option value="9">A+</option>
+                        <option value="8">A</option>
+                        <option value="7">B+</option>
+                        <option value="6">B</option>
+                        <option value="5">C</option>
+                        <option value="0">F</option>
+                        <option value="0">Ab</option>
+                      </select></td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <th scope="row">9</th>
+                    <td>137ZZ</td>
+                    <td>SOCIAL NETWORKS (MOOCS)</td>
+                    <td><select id="sub9" onchange="gotAll()" class="browser-default custom-select">
+                        <option selected value="-1">Select Grade</option>
+                        <option value="10">O</option>
+                        <option value="9">A+</option>
+                        <option value="8">A</option>
+                        <option value="7">B+</option>
+                        <option value="6">B</option>
+                        <option value="5">C</option>
+                        <option value="0">F</option>
+                        <option value="0">Ab</option>
+                      </select></td>
+                    <td>3</td>
+                </tr>
+            </tbody>
+        </table>
+        
+        <div><button id="grade" margin="px" class="btn btn-primary btn-rounded mr-5" onclick="calculateGrade()" disabled>Get Grade</button>Your grade is <b id="result"></b></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
