Added padding to button

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </tbody>
         </table>
         
-        <div><button id="grade" margin="px" class="btn btn-primary btn-rounded mr-5" onclick="calculateGrade()" disabled>Get Grade</button>Your grade is <b id="result"></b></div>
+        <div class="container mb-3"><button id="grade" class="btn btn-primary btn-rounded mr-5" onclick="calculateGrade()" disabled>Get Grade</button>Your grade is <b id="result"></b></div>
     </div>
     <script src="script.js"></script>
 </body>
